--- a/src/main/resources/templates/trash/report.html
+++ b/src/main/resources/templates/trash/report.html
@@ -279,7 +279,7 @@
 <script src="https://cdn.jsdelivr.net/npm/exifr/dist/exifr.umd.js" defer></script>
 
 <script th:inline="javascript">
-    // const data =  [[${rList}]];
+    const data =  [[${rList}]];
     console.log(data);
 
     /************ 목록: 웹/앱 대응 ************/
