--- a/src/main/resources/templates/user/myPage.html
+++ b/src/main/resources/templates/user/myPage.html
@@ -174,7 +174,7 @@
 <div class="dg-app-nav">
     <div class="appbar">
         <div class="row">
-            <div class="brand"><a href="/">동구라미 온</a></div>
+            <div class="brand"><a href="/user">동구라미 온</a></div>
 
             <div class="menu">
                 <a href="/trash/reportPage">지도</a>
@@ -198,7 +198,7 @@
 <div class="dg-web-nav">
     <header class="web-header">
         <div class="row">
-            <div class="web-brand"><a href="/">동구라미 온</a></div>
+            <div class="web-brand"><a href="/user">동구라미 온</a></div>
 
             <nav class="web-nav">
                 <a href="/trash/reportPage">지도</a>
