--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -151,7 +151,7 @@ a{text-decoration:none}
   <div class="phone">
     <div class="appbar">
       <div class="row">
-        <div class="brand"><a href="/">동구라미 온</a></div>
+        <div class="brand"><a href="/user">동구라미 온</a></div>
         <div class="menu"><a href="/trash/reportPage">지도</a><a href="#">참여</a><a href="#">센터</a><a href="#">정보</a></div>
         <div class="login">
             <a th:if="${#strings.isEmpty(session.user_id)}" th:href="@{/user/login}">로그인</a>
@@ -243,7 +243,7 @@ a{text-decoration:none}
 <section class="web-mode">
   <header class="web-header">
     <div class="row">
-      <div class="web-brand"><a href="/">동구라미 온</a></div>
+      <div class="web-brand"><a href="/user">동구라미 온</a></div>
       <nav class="web-nav"><a href="/trash/reportPage">지도</a><a href="#">참여</a><a href="#">센터</a><a href="#">정보</a></nav>
         <!-- 로그인 전만 보이기 -->
         <a th:if="${#strings.isEmpty(session.user_id)}" th:href="@{/user/login}">로그인</a>
